# backend/internal/models/friend_request.go
@@ -4,7 +4,7 @@ import "time"
 
 type FriendRequest struct {
 	ID         int64
-	SenderID   int64
+	Sender     User
 	ReceiverID int64
 	Status     string
 	CreatedAt  time.Time
