# backend/internal/models/user.go
@@ -1,10 +1,11 @@
 package models
 
 type User struct {
-	ID         int64
-	Provider   string
-	ProviderID string
-	Account    string
-	Name       string
-	Avatar     string
+	ID            int64
+	Provider      string
+	ProviderID    string
+	Account       string
+	Name          string
+	Avatar        string
+	RequestStatus string
 }
