# backend/internal/modules/friend/dto/friend_request_response.go
@@ -3,9 +3,9 @@ package dto
 import "time"
 
 type FriendRequestResponse struct {
-	ID         int64     `json:"id"`
-	SenderID   int64     `json:"sender_id"`
-	ReceiverID int64     `json:"receiver_id"`
-	Status     string    `json:"status"`
-	CreatedAt  time.Time `json:"created_at"`
+	ID         int64          `json:"id"`
+	ReceiverID int64          `json:"receiver_id"`
+	Status     string         `json:"status"`
+	CreatedAt  time.Time      `json:"created_at"`
+	Sender     FriendResponse `json:"sender"`
 }
